--- a/en/傏/傏.11167.wikitext
+++ b/en/傏/傏.11167.wikitext
@@ -1,22 +1,34 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人戈中口 (OILR)}}
+
 # to ward off
 # to parry
 # to keep out, as wind, rain, or cold
+
 ====References====
-{{Han ref|kx=0113.070|dkj=00953|dj=0240.140|hdz=10205.040|uh=508F|ud=20623}}
+* {{Han ref|kx=0113.070|dkj=00953|dj=0240.140|hdz=10205.040|uh=508F|ud=20623}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[とう]] (tō), [[どう]] (dō)|kun=[[おごる]] (ogoru)}}
+* {{ja-readings|on=[[とう]] (tō), [[どう]] (dō)|kun=[[おごる]] (ogoru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[táng]] ([[tang2]])|wg=t'ang<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傏]]
