--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=4417<sub>0</sub>|canj=土廿一 (GTM)}}
+
 # earthenware, earthenware vessel
+
 ====References====
-{{Han ref|kx=0226.210|dkj=04975|dj=0461.330|hdz=10429.120|uh=5769|ud=22377|bh=A958|bd=43352}}
+* {{Han ref|kx=0226.210|dkj=04975|dj=0461.330|hdz=10429.120|uh=5769|ud=22377|bh=A958|bd=43352}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ham1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[かん]] (kan)|kun=[[つぼ]] (tsubo)}}
+* {{ja-readings|on=[[かん]] (kan)|kun=[[つぼ]] (tsubo)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=감|rv=gam|mr=kam}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[gān]] ([[gan1]])|wg=kan<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坩]]
