--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -44,8 +44,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 * French: {{t+|fr|jeu|m}}
 * German: {{t+|de|Spiel|n}}
 * Hebrew: [[משחק]] (misḥāq) {{m}}, [[שעשוע]] (shāʿāshuʿā) {{m}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|játék}}
+{{trans-mid}}
 * Italian: {{t+|it|gioco|m}}
 * Kurdish: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
 * Latin: {{t-|la|ludus|m}}
@@ -55,7 +55,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Portuguese: {{t+|pt|jogo|m}}
 * Romanian: {{t-|ro|joc|m|f}}
 * Russian: {{t+|ru|игра|f|tr=igrá|sc=Cyrl}}
-* Slovak [[hra]] {{f}}
+* Slovak: [[hra]] {{f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: {{t+|es|juego|m}}
 * Swedish: {{t+|sv|spel}}
@@ -88,7 +88,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Polish: {{t+|pl|sztuka|f}}
 * Portuguese: [[peça]] [[teatral]] {{f}}
 * Russian: {{t+|ru|пьеса|f|tr=p’jésa|sc=Cyrl}}, {{t|ru|спектакль|m|tr=spektákl’|sc=Cyrl}}
-* Slovak [[hra]] {{f}}
+* Slovak: [[hra]] {{f}}
 * Slovene: {{t+|sl|igra|f}}
 * Spanish: [[obra]] [[teatral]] {{f}}
 * Swedish: {{t+|sv|pjäs|c}}
@@ -99,8 +99,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Dutch: [[spelbeweging]] {{f}}
 * Finnish: {{t+|fi|peli}}
 * Hebrew: {{t-|he|משחק|m|tr=misḥāq|sc=Hebr}}
-{{trans-mid}}
 * Kurdish: [[yarî]] {{f}}, [[lîstik]] {{f}}
+{{trans-mid}}
 * Polish: {{t+|pl|gra|f}}
 * Slovene: {{t+|sl|igra|f}}
 * Swedish: {{t+|sv|spel|c}}
@@ -225,10 +225,10 @@ Old English ''[[pleġian]]''
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
 * German: {{t+|de|spielen}}
-* Icelandic: {{t-|is|spila}}
-* Japanese: [[演奏]]する (ensō suru)
 * Hebrew: [[לנגן]] (l'nāgen)
+* Icelandic: {{t-|is|spila}}
 {{trans-mid}}
+* Japanese: [[演奏]]する (ensō suru)
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * Polish: {{t+|pl|grać}}
 * Portuguese: {{t+|pt|tocar}}
@@ -253,8 +253,8 @@ Old English ''[[pleġian]]''
 * Finnish: {{t-|fi|näytellä}}
 * German: {{t+|de|spielen}}
 * Hebrew: [[לשחק]] (l'sāḥeq)
-* Icelandic: {{t+|is|leika}}
 {{trans-mid}}
+* Icelandic: {{t+|is|leika}}
 * Korean: [[연기를 하다]] (yeon-gireul hada)
 * Polish: [[grać]], [[występować]]
 * Portuguese: {{t+|pt|atuar}}, {{t+|pt|representar}}
@@ -271,8 +271,8 @@ Old English ''[[pleġian]]''
 * Dutch: [[spelen]], [[meespelen]]
 * Finnish: {{t+|fi|pelata}}
 * French: [[jouer]] à
-* Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
 {{trans-mid}}
+* Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
 * Polish: [[grać]] w
 * Portuguese: {{t+|pt|jogar}}
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
@@ -288,8 +288,8 @@ Old English ''[[pleġian]]''
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
 * Hebrew: [[להשמיע]] (l'hāshmiʿā)
-* Icelandic: {{t-|is|spila}}
 {{trans-mid}}
+* Icelandic: {{t-|is|spila}}
 * Polish: [[grać]], [[odtwarzać]]
 * Portuguese: {{t+|pt|gravar}}
 * Slovene: [[predvajati]]
