--- a/en/昭/昭.16981.wikitext
+++ b/en/昭/昭.16981.wikitext
@@ -1,32 +1,51 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6706<sub>2</sub>|canj=日尸竹口 (ASHR)|ids=⿰[[日]][[召]]}}
+
 # [[bright]], [[luminous]]
 # [[illustrious]]
+
 ====References====
-{{Han ref|kx=0493.220|dkj=13855|dj=0858.020|hdz=21504.090|uh=662D|ud=26157|bh=AC4C|bd=44108}}
+* {{Han ref|kx=0493.220|dkj=13855|dj=0858.020|hdz=21504.090|uh=662D|ud=26157|bh=AC4C|bd=44108}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=chiu1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=3|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[しょう]] (shō)|kun=[[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[しょう]] (shō)|kun=[[あきらか]] (akiraka)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[소]], [[조]]|eumhun=|rv=so, jo|mr=so, cho|y=so, co}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[xià]] ([[xia4]]), [[zhāo]] ([[zhao1]])|wg=hsia<sup>4</sup>, chao<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昭]]
