--- a/en/慓/慓.15719.wikitext
+++ b/en/慓/慓.15719.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=14|four=9109<sub>1</sub>|canj=心一田火 (PMWF)}}
+
 # {{defn|Han|sort=心11}}
+
 ====References====
-{{Han ref|kx=0398.290|dkj=11084|dj=0737.230|hdz=42345.060|uh=6153|ud=24915|bh=E1C9|bd=57801}}
+* {{Han ref|kx=0398.290|dkj=11084|dj=0737.230|hdz=42345.060|uh=6153|ud=24915|bh=E1C9|bd=57801}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心11}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ひょう]] (hyō)|kun=[[はやい]] (hayai), [[すばやい]] (subayai)}}
+* {{ja-readings|on=[[ひょう]] (hyō)|kun=[[はやい]] (hayai), [[すばやい]] (subayai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=표|eumhun=|rv=pyo|mr=p'yo|y=phyo}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[piào]] ([[piao4]])|wg=p'iao<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:慓]]
