--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -120,6 +120,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 {{trans-top|To orgasm}}
 * Bulgarian: [[свършвам]] (svarshvam)
 * Finnish: [[tulla]], [[saada]] [[orgasmi]]
+* French: [[venir, jouir]]
 * Polish: [[dochodzić]] / [[dojść]]
 * Italian: [[venire]]
 {{trans-mid}}
@@ -132,6 +133,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 {{trans-bottom}}
 
 {{trans-top|(come by) To get one’s hands on}}
+* French: [[mettre la main sur ...]]
 {{trans-mid}}
 {{trans-bottom}}
 
