--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -19,7 +19,7 @@ From {{OF.}} ''[[conte]]''
 # {{law}} A [[charge]] of misconduct brought in a [[legal]] proceeding.
 
 =====Translations=====
-{{trans-top|The male ruler of a county (1)}}
+{{trans-top|the male ruler of a county}}
 * [[Breton]]: [[kont]] {{m}} -ed {{p}}
 * Czech: {{t-|cs|hrabě|n}}
 * Danish: {{t-|da|greve|c}}
@@ -45,7 +45,7 @@ From {{OF.}} ''[[conte]]''
 * Turkish: {{t+|tr|kont|m}}
 {{trans-bottom}}
 
-{{trans-top|The result of a tally that reveals the number of items in a set (2)}}
+{{trans-top|the result of a tally that reveals the number of items in a set}}
 * [[Breton]]: [[kont]] {{f}} -où {{p}}
 * Czech: {{t+|cs|počet|n}}
 * Dutch: {{t-|nl|telling|f}}
@@ -56,7 +56,7 @@ From {{OF.}} ''[[conte]]''
 * Slovene: [[rezultat]] {{m}}
 {{trans-bottom}}
 
-{{trans-top|A countdown (3)}}
+{{trans-top|a countdown}}
 * Czech: [[odpočet]] {{n}}
 * Dutch: [[aftelling]] {{f}}
 * Finnish: [[lähtölaskenta]]
@@ -68,7 +68,7 @@ From {{OF.}} ''[[conte]]''
 * Slovene: [[odštevanje]] {{n}}
 {{trans-bottom}}
 
-{{trans-top|A charge of misconduct (4)}}
+{{trans-top|a charge of misconduct}}
 * Finnish: [[syyte]], [[syytekohta]]
 * Spanish: {{t+|es|punto|m}}, {{t+|es|cargo|m}}
 {{trans-bottom}}
@@ -134,6 +134,7 @@ From {{OF.}} ''[[conter]]'', [[add up]] and tell a [[story]].
 {{trans-bottom}}
 
 [[Category:English ergative verbs]]
+[[Category:Nobility]]
 
 [[ar:count]]
 [[es:count]]
