--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -85,7 +85,8 @@
 {{bottom}}
 
 ===See also===
-*[[Wiktionary Appendix:Countries of the world]]
+*[[Appendix:Countries of the world]]
+*[[Appendix:Place names in the United States of America]]
 
 [[Category:Countries]]
 
