--- a/en/愐/愐.15652.wikitext
+++ b/en/愐/愐.15652.wikitext
@@ -1,21 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9106<sub>0</sub>|canj=心一田中 (PMWL)}}
+
 # [[bashful]]
 # to [[consider]]
+
 ====References====
-{{Han ref|kx=0394.260|dkj=10925|dj=0731.020|hdz=42327.030|uh=6110|ud=24848|bh=D94D|bd=55629}}
+* {{Han ref|kx=0394.260|dkj=10925|dj=0731.020|hdz=42327.030|uh=6110|ud=24848|bh=D94D|bd=55629}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[べん]] (ben), [[めん]] (men)|kun=[[つとめる]] (tsutomeru)}}
+* {{ja-readings|on=[[べん]] (ben), [[めん]] (men)|kun=[[つとめる]] (tsutomeru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[miǎn]] ([[mian3]])|wg=mien<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愐]]
