--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -5,7 +5,7 @@
 From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}''' (eikōn) "likeness, image, portrait". Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded in 1982.
 
 ===Pronunciation===
-*{{Audio|En-us-icon.ogg|Audio (US)}}
+* {{Audio|En-us-icon.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun}}
@@ -14,78 +14,78 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 # An [[image]], [[picture]], or other [[representation]].
 # A religious painting, often done on wooden panels.
 # A person or thing that is the best example of a certain profession or some doing.
-#:''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
+#: ''That man is an '''icon''' in the business; he personifies loyalty and good business sense.''
 # A small picture which represents something (such as an icon on a computer screen which when clicked performs some function.)
 # {{linguistics}}: A type of noun whereby the form reflects and is determined by the [[referent]]; [[onomatopoeic]] words are necessarily all icons.  See also [[symbol]] and [[index]].
 
 ====Related terms====
-*[[iconic]]
-*[[iconify]]
+* [[iconic]]
+* [[iconify]]
 * [[iconstasis]]
-*[[iconoclast]]
-*[[iconography]]
+* [[iconoclast]]
+* [[iconography]]
 
 ====Translations====
 {{trans-top|Image}}
-*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-*Dutch: [[icoon]] {{n}}
-*Finnish: [[ikoni]], [[symboli]]
-*Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[απεικόνιση]] [apiˈko̞niˌsi] {{f}}, [[παράσταση]] [paˈrastaˌsi] {{f}}, [[αναπαράσταση]] [anapaˈrastaˌsi] {{f}}, [[ομοίωμα]] [o̞ˈmio̞ˌma] {{n}}, [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[απείκασμα]] [aˈpikaˌzma] {{n}}, [[απεικόνισμα]] [apiˈko̞niˌzma] {{n}}
+* Bosnian: [[ikona#Bosnian|ikona]] {{f}}
+* Dutch: [[icoon]] {{n}}
+* Finnish: [[ikoni]], [[symboli]]
+* Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[απεικόνιση]] [apiˈko̞niˌsi] {{f}}, [[παράσταση]] [paˈrastaˌsi] {{f}}, [[αναπαράσταση]] [anapaˈrastaˌsi] {{f}}, [[ομοίωμα]] [o̞ˈmio̞ˌma] {{n}}, [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[απείκασμα]] [aˈpikaˌzma] {{n}}, [[απεικόνισμα]] [apiˈko̞niˌzma] {{n}}
 {{trans-mid}}
-*Italian: [[icona]] {{f}}
-*Polish: [[ikona]] {{f}}
-*Serbian
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
-*Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+* Italian: [[icona]] {{f}}
+* Polish: [[ikona]] {{f}}
+* Serbian:
+*: Cyrillic: [[икона#Serbian|икона]] {{f}}
+*: Latin: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|Religious painting}}
-*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-*Dutch: [[icoon]] {{n}}
-*Finnish: [[ikoni]]
-*Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
-*Italian: [[icona]] {{f}}
-*Latin: icon {{f}}
+* Bosnian: [[ikona#Bosnian|ikona]] {{f}}
+* Dutch: [[icoon]] {{n}}
+* Finnish: [[ikoni]]
+* Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
+* Italian: [[icona]] {{f}}
+* Latin: icon {{f}}
 {{trans-mid}}
-*Polish: [[ikona]] {{f}}
-*Serbian
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
-*Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+* Polish: [[ikona]] {{f}}
+* Serbian:
+*: Cyrillic: [[икона#Serbian|икона]] {{f}}
+*: Latin: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|The best example of something}}
-*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-*Dutch: [[icoon]], [[idool]] {{n}}
-*Finnish: [[symboli]], [[ikoni]]
-*Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[ίνδαλμα]] [ˈinðalˌma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}
-*Italian: [[icona]] {{f}}
+* Bosnian: [[ikona#Bosnian|ikona]] {{f}}
+* Dutch: [[icoon]], [[idool]] {{n}}
+* Finnish: [[symboli]], [[ikoni]]
+* Greek: [[είδωλο]] [ˈiðo̞ˌlo̞] {{n}}, [[ίνδαλμα]] [ˈinðalˌma] {{n}}, [[εικόνα]] [iˈko̞na] {{f}}
+* Italian: [[icona]] {{f}}
 {{trans-mid}}
-*Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
-*Serbian
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
-*Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+* Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
+* Serbian:
+*: Cyrillic: [[икона#Serbian|икона]] {{f}}
+*: Latin: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|Small picture, computer icon}}
-*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-*Dutch: [[icoon]], [[pictogram]] {{n}}
-*Finnish: [[kuvake]]
-*Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
-*Italian: [[icona]] {{f}}
+* Bosnian: [[ikona#Bosnian|ikona]] {{f}}
+* Dutch: [[icoon]], [[pictogram]] {{n}}
+* Finnish: [[kuvake]]
+* Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
+* Italian: [[icona]] {{f}}
 {{trans-mid}}
-*Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
-*Serbian
-*:Cyrillic: [[икона#Serbian|икона]] {{f}}
-*:Latin: [[ikona#Serbian|ikona]] {{f}}
-*Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
+* Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
+* Serbian:
+*: Cyrillic: [[икона#Serbian|икона]] {{f}}
+*: Latin: [[ikona#Serbian|ikona]] {{f}}
+* Spanish: [[icono]] {{m}}, [[ícono]] {{m}}
 {{trans-bottom}}
 
 {{checktrans}}
 {{trans-top|Translations to be checked}}
-*{{ttbc|Interlingua}}: [[icono]]
+* {{ttbc|Interlingua}}: [[icono]]
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -103,8 +103,8 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 # (''later Latin''): '''icon''' (''religious painting'')
 
 ====See also====
-*[[iconicus]]
-*[[iconismus]]
+* [[iconicus]]
+* [[iconismus]]
 
 [[io:icon]]
 [[kk:icon]]
