--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -30,7 +30,7 @@
 
 ===See also===
 *[[tow]]
-*[[Wiktionary_Appendix:Colours|Appendix:Colours]]
+*[[Appendix:Colours]]
 
 [[Category:Browns]]
 [[Category:Colors]]
