--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -55,7 +55,7 @@
 {{trans-bottom}}
 
 ===See also===
-* [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+* [[Appendix:Colours]]
 
 [[Category:Colors]]
 [[Category:Hair]]
