--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -318,7 +318,7 @@
 * [[sloe]]
 * [[umeboshi]]
 * [[umesu]]
-* [[Wiktionary_Appendix:Colours|Appendix:Colours]]
+* [[Appendix:Colours]]
 {{bottom}}
 
 [[Category:Colors]]
