--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -6,7 +6,7 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 
 ===Pronunciation===
 * {{IPA|/ˈstʌmək/}}
-*{{audio|en-us-stomach.ogg|Audio (US)}}
+* {{audio|en-us-stomach.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun}}
@@ -15,17 +15,17 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 # {{informal}} The [[belly]].
 
 ====Synonyms====
-*(''belly''): [[abdomen]], [[belly]], [[gut]], [[guts]], [[tummy]]
+* (''belly''): [[abdomen]], [[belly]], [[gut]], [[guts]], [[tummy]]
 
 ====Derived terms====
-*[[stomach lining]]
+* [[stomach lining]]
 
 ====Related terms====
-*[[alvinolagnia]]
+* [[alvinolagnia]]
 
 ====Translations====
 {{trans-top|organ that stores food}}
-* Arabic: {{ARchar|[[معدة]]}} {{unicode|(máʕida)}} {{f}}
+* Arabic: {{Arab|[[معدة]]}} {{unicode|(máʕida)}} {{f}}
 * Aramaic:
 *: Syriac: [[ܐܣܛܘܡܟܐ]] (esṬūmkā, esṬūmko) {{m}}
 *: Hebrew: [[אסטומכא]] (esṬūmkā, esṬūmko) {{m}}
@@ -67,7 +67,7 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 {{trans-bottom}}
 
 {{trans-top|belly}}
-* Arabic: {{ARchar|[[معدة]]}} {{unicode|(máʕida)}} {{f}}, {{Arab|[[بطن|بَطْن]]}} {{unicode|(baʈn)}} {{f}}
+* Arabic: {{Arab|[[معدة]]}} {{unicode|(máʕida)}} {{f}}, {{Arab|[[بطن|بَطْن]]}} {{unicode|(baʈn)}} {{f}}
 * Chinese: {{zh-ts|腹部|腹部}} (fùbù)
 * Czech: {{t-|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
@@ -81,8 +81,8 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 * Italian: {{t+|it|pancia|f}}
 * Japanese: [[腹]] ([[はら]], hara)
 * Korean: [[배]] (bae)
-* Kurdish: 
-*:Sorani: {{t|ku|زگ|tr=zig|sc=KUchar}}, {{t|ku|ورگ|tr=wirg|sc=KUchar}}
+* Kurdish:
+*: Sorani: {{t|ku|زگ|tr=zig|sc=KUchar}}, {{t|ku|ورگ|tr=wirg|sc=KUchar}}
 * Maltese: {{t-|mt|żaqq|f|xs=Maltese}}
 * Portuguese: {{t+|pt|barriga|f}}
 * Russian: {{t+|ru|живот|m|tr=živót|sc=Cyrl}}
@@ -93,13 +93,13 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 ===Verb===
 {{en-verb}}
 
-#{{transitive}} To be able to [[tolerate]] (something), emotionally, physically, or mentally; to be able to [[stand]] or [[handle]] something.
-#:''I really can’t '''stomach''' jobs involving that much paperwork, but some people seem to tolerate them.''
-#:''I can't '''stomach''' her cooking.''
+# {{transitive}} To be able to [[tolerate]] (something), emotionally, physically, or mentally; to be able to [[stand]] or [[handle]] something.
+#: ''I really can’t '''stomach''' jobs involving that much paperwork, but some people seem to tolerate them.''
+#: ''I can't '''stomach''' her cooking.''
 
 ===See also===
-*[[stomachable]]
-*[[unstomachable]]
+* [[stomachable]]
+* [[unstomachable]]
 
 [[Category:1000 English basic words]]
 [[Category:Anatomy]]
