--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -103,7 +103,7 @@ Shares offered to the public:
 # {{intransitive}} To move in a fluid manner.
 #:''The dancer '''floated''' gracefully around the stage.''
 # {{intransitive}} To automatically adjust a parameter as related parameters change.
-# {{intransitive|finance}} To allow a price to be determined by the markets as opposed to by rule.
+# {{intransitive|finance}} (of currencies) To have an exchange value determined by the markets as opposed to by rule.
 #:''The yen '''floats''' against the dollar.''
 # {{intransitive}} {{colloquial}} (of an idea or scheme) To be viable.
 #: ''That's a daft idea... it'll never '''float'''.''
@@ -112,6 +112,8 @@ Shares offered to the public:
 #:''I '''floated''' the idea of free ice-cream on Fridays, but no one was interested.''
 # {{transitive}} To extend a short-term loan to.
 #:''Could you '''float''' me $50 until payday?''
+# {{transitive|finance}} To allow (the exchange value of a currency) to be determined by the markets.
+#:''The government '''floated''' the pound in January.''
 # {{transitive|finance|AU|and other Commonwealth countries?}} To issue or sell [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, followed by [[listing]] on a [[stock exchange]].
 #:'''2005''', ''He '''floated''' the company on the Milan Stock Exchange last December and sold 29 per cent of its shares, mostly to American investors.'' &mdash; article by Dewi Cooke, ''[[w:The Age|The Age]]'' newspaper, 21 June 2005 (about Mario Moretti Polegato) [http://www.theage.com.au/news/business/shoemaker-strides-for-world-domination/2005/06/20/1119250927926.html?from=moreStories]
 
