--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -26,7 +26,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Dutch: [[vlees]] {{n}}
 * Finnish: [[liha]]
 * French: [[chair]]
-* German: [[Fleisch]] {{n}}
+* German: {{t+|de|Fleisch|n}}
 * Greek: [[σάρκα]] [ˈsarka] {{f}}, [[κρέας]] [ˈkre̞.as] {{n}} [rare (means also "meat")]
 {{trans-mid}}
 * Hungarian: [[hús]]
@@ -42,7 +42,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Danish: [[kød]]
 * Dutch: [[vlees]] {{n}}
 * Finnish: [[liha]]
-* German: [[Fleisch]] {{n}}
+* German: {{t+|de|Fleisch|n}}
 {{trans-mid}}
 * Greek: [[σάρκα]] [ˈsarka] {{f}}, [[κρέας]] [ˈkre̞.as] {{n}} (means also "meat")
 * Hungarian: [[hús]]
@@ -50,10 +50,10 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * [[Scottish Gaelic]]: [[feòil]] {{f}}
 {{trans-bottom}}
 
-{{trans-top|human body enity}}
+{{trans-top|human body entity}}
 * Danish: [[krop]]
 * French: [[corps]]
-* German: [[Fleisch]] {{n}}
+* German: {{t+|de|Fleisch|n}}, {{t+|de|Leib|m}}
 {{trans-mid}}
 * Greek: [[σάρκα]] [ˈsarka] {{f}}
 * [[Ido]]: [[korpo]]
@@ -63,6 +63,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 {{trans-top|skin}}
 * Danish: [[hud]]
 * Dutch: [[vel]] {{n}}
+* German: {{t+|de|Haut|n}}
 {{trans-mid}}
 * Greek: [[δέρμα]] [ˈderma'] {{n}}
 * [[Scottish Gaelic]]: [[craiceann]] {{m}}
@@ -73,7 +74,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * Dutch: [[vruchtvlees]] {{n}}
 * Finnish: [[malto]], [[hedelmäliha]]
 * French: [[pulpe]]
-* German: [[Fleisch]] {{n}}, [[Fruchtfleisch]] {{n}}
+* German: {{t+|de|Fleisch|n}}, {{t+|de|Fruchtfleisch|n}}
 {{trans-mid}}
 * Greek: [[σάρκα]] [ˈsarka] {{f}}
 * [[Ido]]: [[pulpo]]
@@ -86,7 +87,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 * [[Catalan]]: [[carn]] {{f}}
 * Danish: [[kødfarve]]
 * Dutch: [[mensenkleur]] {{f}}
-* German: [[Fleischfarbe]] {{f}}
+* German: {{t+|de|Fleischfarbe|f}}
 {{trans-mid}}
 * Greek: [[σαρκόχρουν]] [sarˈko̞xrun] {{n}}, [[σαρκόχρωμο]] [sarˈko̞xro̞ˌmo̞] {{n}}, [[σαρκί]] [sarˈci] {{n}} (colloquial), [[κρεατί]] [ˌkre̞.a.ˈti] {{n}} (colloquial)
 * Russian: [[телесный]] ''adj.''
@@ -95,7 +96,6 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 =====Translations to be checked=====
 {{checktrans}}
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
-* {{ttbc|German}}: [[Fleisch]] ''n'' (4 ''dated'')
 * {{ttbc|Persian}}: [[گوشت]] (gusht) (1), [[پوست]] (pust) (2,4,5)
 
 ===Verb===
