--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -24,6 +24,7 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 
 ====Translations====
 {{trans-top|point in the sky vertically above a given position or observer}}
+* Arabic: [[ذروة]]
 * Croatian: [[zenit]] {{m}}
 * Czech: {{t+|cs|nadhlavník|m}}
 * Finnish: {{t-|fi|zeniitti}}
@@ -38,11 +39,12 @@ From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'
 {{trans-bottom}}
 
 {{trans-top|peak}}
+* Arabic: [[ذروة]]
 * Croatian: [[zenit]] {{m}}
 * Finnish: [[huippu]], [[huipennus]], [[huippukohta]], [[kohokohta]]
 * French: {{t+|fr|zénith|m}}
-* German: {{t-|de|Zenit|m}}
 {{trans-mid}}
+* German: {{t-|de|Zenit|m}}
 * Italian: {{t-|it|zenit|m}}, {{t+|it|culmine|m}}, {{t+|it|apice|m}}
 * Japanese: {{t-|ja|頂点|tr=chōten|sc=Jpan}}, {{t|ja|絶頂|tr=zecchō|sc=Jpan}}
 * Spanish: {{t|es|apogeo|m}}, {{t+|es|cenit|m}}
