--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{Arab.}} ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' instead of ''[[zemt]]''.
+From {{Arab.}} ''as-samt'' (السمت) "direction of heads", via misspelled Italian ''zenit'' instead of ''[[zemt]]''.
 
 ===Pronunciation===
 * {{IPA|/'zen.iθ/}}
