--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{Arab.}} ''as-samt'' {{ARchar|[[السَّمْت|السَّمْت]]}} "direction of heads", via misspelled Italian ''zenit'' instead of ''[[zemt]]''.
+From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}} from {{etyl|ar|en}} {{term|السَّمْت|السَّمْت|direction of heads|tr=as-samt|lang=ar|sc=Arab}}.
 
 ===Pronunciation===
 * {{IPA|/'zen.iθ/}}
