--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -12,7 +12,7 @@
 * [[Land of the Free]]
 
 ====Translations====
-{{top}}
+{{trans-top|Country in North America}}
 * Albanian: [[Shtete e Bashkuara të Amerikës]], [[SHBA]]
 * Arabic: {{Arab|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{Arab|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
 * Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amērikayi Miats‘yal Nahangnēr)
@@ -34,7 +34,7 @@
 * [[Frisian]]: [[Feriene Steaten fan Amearika]]
 * Georgian: [[ამერიკის შეერთებული შტატები]] (amerikis šeert‘ebuli štatebi)
 * German: [[Vereinigte Staaten von Amerika]] {{m|p}}, (''short form'') [[Vereinigte Staaten]] {{m|p}}, [[USA]] {{m|p}} or {{f|s}}
-* Greek: {{t|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}{{t|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t|el|ΗΠΑ|f|p|tr=IPA}} (USA)
+* Greek: {{t|el|Ηνωμένες Πολιτείες της Αμερικής|f|p|tr=Inoménes Politeíes tis Amerikís}} (official), ''short forms:'' {{t|el|Ηνωμένες Πολιτείες Αμερικής|f|p|tr=Inoménes Politeíes Amerikís}}, {{t|el|Ηνωμένες Πολιτείες|f|p|tr=Inoménes Politeíes}}, {{t|el|ΗΠΑ|f|p|tr=IPA}} (USA)
 * [[Gujarati]]: [[સંયુકત રાજ્ય અમેરિકા]]
 * Hawaiian: [['Amelika Huipū'ia]]
 * Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel Amerika), ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה״ב]] (ARH-B)
@@ -47,7 +47,7 @@
 * Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 * Kazakh: [[Америка Құрама Штаттары]]
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
-{{mid}}
+{{trans-mid}}
 * Kirghiz: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
@@ -82,7 +82,7 @@
 * Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
 * [[Võro]]: [[Ameeriga Ütisriigiq]]
 * Yiddish: ''short form'': [[פֿאַראייניקטע שטאַטן]] (Fareynikte Shtatn)
-{{bottom}}
+{{trans-bottom}}
 
 ===See also===
 * [[Appendix:Countries of the world]]
