--- a/en/倰/倰.11058.wikitext
+++ b/en/倰/倰.11058.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=2424<sub>7</sub>|canj=人土金水 (OGCE)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0109.090|dkj=00799|dj=0232.070|hdz=10170.050|uh=5030|ud=20528|bh=D0CD|bd=53453}}
+* {{Han ref|kx=0109.090|dkj=00799|dj=0232.070|hdz=10170.050|uh=5030|ud=20528|bh=D0CD|bd=53453}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人08}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[りょう]] (ryō), [[ろう]] (rō)|kun=[[おかす]] (okasu), [[あぎむく]] (agimuku), [[ながい]] (nagai)}}
+* {{ja-readings|on=[[りょう]] (ryō), [[ろう]] (rō)|kun=[[おかす]] (okasu), [[あぎむく]] (agimuku), [[ながい]] (nagai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=릉|rv=reung|mr=rŭng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[léng]] ([[leng2]])|wg=leng<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:倰]]
