--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=7260<sub>4</sub>|canj=竹心日 (HPA)}}
+
 # [[dusk]], [[nightfall]], [[twilight]], [[dark]]
+
 ====References====
-{{Han ref|kx=0491.140|dkj=13806|dj=0854.010|hdz=21492.030|uh=660F|ud=26127|bh=A9FC|bd=43516}}
+* {{Han ref|kx=0491.140|dkj=13806|dj=0854.010|hdz=21492.030|uh=660F|ud=26127|bh=A9FC|bd=43516}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=fan1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[こん]] (kon)|kun=[[くらい]] (kurai)}}
+* {{ja-readings|on=[[こん]] (kon)|kun=[[くらい]] (kurai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=혼|eumhun=|rv=hon|mr=hon|y=hon}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[hūn]] ([[hun1]])|wg=hun<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昏]]
