--- a/en/傛/傛.11182.wikitext
+++ b/en/傛/傛.11182.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=2326<sub>8</sub>|canj=人十金口 (OJCR)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0113.250|dkj=00970|dj=0241.140|hdz=10206.040|uh=509B|ud=20635|bh=D851|bd=55377}}
+* {{Han ref|kx=0113.250|dkj=00970|dj=0241.140|hdz=10206.040|uh=509B|ud=20635|bh=D851|bd=55377}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[かがむ]] (kagamu)}}
+* {{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[かがむ]] (kagamu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=용|rv=yong|mr=yong}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yǒng]] ([[yong3]])|wg=yung<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傛]]
