--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -1,7 +1,12 @@
 ==Translingual==
 
 ===Etymology===
-From [[日]] ‘sun’ + [[月]] ‘moon’.
+The etymology is ambiguous. The traditional etymology is: {{liushu|3}}: {{term|日||sun|sc=Hani}} + {{term|月||moon|sc=Hani}}, which is what the modern form suggests.
+However, other forms have a more complex form, and show a moon shining through a window – the development is not as simple as the current form suggests.<ref>{{cite web
+|title=Etymology: 明
+|author=Richard Sears
+|url=http://www.internationalscientific.org/CharacterASP/CharacterEtymology.aspx?characterInput=%E6%98%8E&submitButton1=Etymology
+|accessdate=2008-06-15}}</ref>
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=6702<sub>0</sub>|canj=日月 (AB)|ids=⿰[[日]][[月]]}}
