--- a/en/圽/圽.12992.wikitext
+++ b/en/圽/圽.12992.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土心竹竹 (GPHH)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0224.210|dkj=04905|dj=0459.090|hdz=10425.030|uh=573D|ud=22333}}
+* {{Han ref|kx=0224.210|dkj=04905|dj=0459.090|hdz=10425.030|uh=573D|ud=22333}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ぼつ]] (botsu), [[もち]] (mochi)|kun=[[うめる]] (umeru)}}
+* {{ja-readings|on=[[ぼつ]] (botsu), [[もち]] (mochi)|kun=[[うめる]] (umeru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[mò]] ([[mo4]])|wg=mo<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:圽]]
