--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -67,5 +67,6 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 [[ru:zenith]]
 [[ta:zenith]]
 [[te:zenith]]
+[[th:zenith]]
 [[vi:zenith]]
 [[zh:zenith]]
