--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -13,16 +13,16 @@ From {{OF.}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{L.}} ''[[pulsare]]
 {{en-verb|push|es}}
 
 # {{transitive}} To apply a [[force]] to (an object) such that it moves [[away]] from the person or thing applying the force.
-#: ''In his anger, he was about to '''push''' me against the wall and threaten me.''
+#: ''In his anger he pushed me against the wall and threatened me.''
 # {{transitive}} To continually attempt to persuade (a person) into a particular course of action.
 # {{transitive}} To continually attempt to promote (a point of view).
-#: ''Don't '''push''' the issue &mdash; I'm not interested.''
+#: ''Stop '''pushing''' the issue &mdash; I'm not interested.''
 # {{transitive}} To [[promote]] a [[product]] with the intention of [[sell]]ing it.
-#: ''We plan to '''push''' that perfume again.''
-#: ''There were two men hanging around the school gates today trying to '''push''' drugs.''
+#: ''They're '''pushing''' that perfume again.''
+#: ''There were two men hanging around the school gates today, '''pushing''' drugs.''
 # {{context|informal|transitive}} To [[approach]]; to come close to.
-#: ''My old car will soon '''push''' 250,000 miles.''
-#: ''He will soon '''push''' sixty.'' (= ''He will soon near sixty years old.'')
+#: ''My old car is '''pushing''' 250,000 miles.''
+#: ''He's pushing sixty.'' (= ''he's nearly sixty years old'')
 # {{intransitive}} To apply a [[force]] to an object such that it moves [[away]] from the person applying the force.
 #: ''You need to '''push''' quite hard to get this door open.''
 # {{intransitive}} To tense the muscles in the [[abdomen]] in order to [[expel]] its contents.
@@ -131,10 +131,10 @@ From {{OF.}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{L.}} ''[[pulsare]]
 # A short, directed application of [[force]]; an act of pushing.
 #: ''Give the door a hard '''push''' if it sticks.''
 # An act of tensing the muscles of the abdomen in order to expel its contents.
-#: ''One more '''push''' and the baby will be out.''
+#: ''One more push and the baby will be out.''
 # A [[great]] [[effort]] (to do something).
 #: ''Some details got lost in the '''push''' to get the project done.''
-#: ''Let's give one last '''push''' on our advertising campaign.''
+#: ''Let's give one last push on our advertising campaign.''
 # {{military}} A [[marching]] or [[drill]] [[maneuver]]/[[manoeuvre]] performed by moving a [[formation]] (especially a [[company front]]) [[forward]] or [[toward]] the [[audience]], usually to accompany a dramatic [[climax]] or [[crescendo]] in the music.
 # {{rfv-sense}} a wager that results in no loss or gain for the bettor as a result of a tie or even score
 
