--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -163,7 +163,7 @@
 #* '''1904''' September 15, James C. Bennett, Walter Renton Ingalls (editor), ''Lead Smelting and Refining with Some Notes on Lead Mining'' (1906), The Engineering and Mining Journal, page 66
 #*: The plant, which is here described, for '''bricking''' fine ores and flue dust, was designed and the plans produced in the engineering department of the Selby smelter.
 # {{slang}} To [[hit]] someone using a brick.
-# {{computing|_|slang}} To make an [[electronic]] device nonfunctional and usually [[unrepairable]].
+# {{computing|_|slang}} To make an [[electronic]] device nonfunctional and usually [[irreparable]].
 #: ''My VCR was '''bricked''' during the lightning storm''.
 #* '''2007''' December 14, Joe Barr, “PacketProtector turns SOHO router into security powerhouse”, ''Linux.com''
 #*: installing third-party firmware will void your warranty, and it is possible that you may '''brick''' your router.
