--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -29,7 +29,7 @@
 ====Noun====
 {{en-noun|-}}
 
-# A type of [[wheat]], ''[[Triticum aestivum spelta]]''
+# A grain, considered either a subspecies of [[wheat]], ''[[Triticum aestivum spelta]]'', or a separate species ''[[Triticum spelta]]''.
 
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
