--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -236,7 +236,8 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Vietnamese: (noun +) [[chọn lọc]], [[món]] [[bở]]
 {{trans-bottom}}
 
-{{trans-top|See [[raisin]]}}
+{{trans-top|raisin}}
+* See [[raisin]]
 {{trans-bottom}}
 
 {{trans-top|(''slang'') testicle}}
