--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -4,13 +4,7 @@
 Derived from [[масло]] ('butter', 'oil'). Cf. French [[mardi gras]].
 
 ===Pronunciation===
-{| border=1 cellpadding=5
-| [[w:IPA|IPA]] || {{IPAchar|/ˈmaslʲinʲiʦə/}}
-|-
-| [[w:SAMPA|SAMPA]] || /m"asl'in'its@/
-|-
-| [[w:X-SAMPA|X-SAMPA]] || /"masl'in'its@/
-|}
+* {{IPA|/ˈmaslʲinʲiʦə/|lang=ru}}, {{SAMPA|/"masl'in'its@/}}
 
 ===Noun===
 '''масленица''' {{f}}
